<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Games</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_list_games">Games</string>
    <string name="title_activity_rate_games">Rate</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="activity_list_game">ListGamesActivity</string>
    <string name="activity_rate_games">RateGamesActivity</string>
    <string name="game_name_label">Name:</string>
    <string name="game_console_label">Console:</string>
    <string name="checkbox_finished">Finished</string>
    <string name="action_add_game">Add game</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="form_hint_game_name">Name</string>
    <string name="form_hint_game_icon">Click upload</string>
    <string name="form_button_upload">upload</string>
    <string name="please_enter_game_name">Please enter the name of the game.</string>
    <string name="Notice">Notice</string>
    <string name="k">OK</string>
    <string name="save">Save</string>

</resources>
