<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    android:id="@+id/rl_form_root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_form_game_name"
        android:hint="@string/form_hint_game_name"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_form_game_icon"
        android:hint="@string/form_hint_game_icon"
        android:focusable="false"/>

    <Button
        android:id="@+id/btn_form_upload"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/form_button_upload"/>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spin_form_game_console"
        android:layout_below="@+id/et_form_game_icon"
        android:entries="@array/spinner_game_console_entries"
        />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkbox_finished"
        android:id="@+id/cb_form_game_finished"/>


    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rb_form_game_rating"/>

</LinearLayout>