<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:focusable="false"
                android:focusableInTouchMode="false">

    <ImageView
        android:id="@+id/iv_game_icon"
        android:layout_width="@dimen/icon_size"
        android:layout_height="@dimen/icon_size"
        android:src="@drawable/ic_launcher"/>

    <TextView
        android:id="@+id/tv_game_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/iv_game_icon"
        android:text="@string/game_name_label"/>

    <TextView
        android:id="@+id/tv_game_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/tv_game_name_label"
        android:text="Destiny"/>

    <TextView
        android:id="@+id/tv_game_console_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/iv_game_icon"
        android:layout_below="@+id/tv_game_name_label"
        android:text="@string/game_console_label"/>

    <TextView
        android:id="@+id/tv_game_console"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/tv_game_console_label"
        android:layout_below="@+id/tv_game_name"
        android:text="Xbox One"/>

    <CheckBox
        android:id="@+id/cb_game_finished"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkbox_finished"
        android:layout_below="@+id/tv_game_console_label"
        android:layout_toEndOf="@+id/iv_game_icon"/>


</RelativeLayout>